Welcome: fixed spacing issue for jump to section

--- a/src/Home/Welcome/Welcome.css
+++ b/src/Home/Welcome/Welcome.css
@@ -101,16 +101,20 @@
 .Welcome-Vertical-Carousel-Container {
   height: auto;
   width: auto;
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
-  flex-direction: column !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .Welcome-Vertical-Carousel-Container.Desktop {
   margin-top: 40px;
   margin-bottom: 10px;
   margin-right: 10px;
+}
+
+.Welcome-Vertical-Carousel-Container.Phone {
+  margin-top: 5%;
 }
 
 .Welcome-VC-Header-Container {
